Revert "fix startpage mainImage alignment"
This reverts commit 95f4700e1db9e4b0073bb2df70d4543ce7691d81.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -572,6 +572,10 @@ ul.border-separated li:last-child {
   text-align: center;
   width: 880px;
 }
+.page-start .nav {
+  height: 0px;
+  z-index: 1; /* clickable button in FF */
+}
 .page-start nav.transparent {
   background-color: none;
   box-shadow: none;
